welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:13: error: value += is not a member of Int
    c+=x
     ^